--- a/gb/20/5/5/n12084810.md
+++ b/gb/20/5/5/n12084810.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/er2596/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/er2596/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/er2596/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/er2596/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/er2596/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/er2596/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/er2596/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/er2596/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/er2596/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/er2596/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/er2596/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/er2596/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/er2596/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>SEMI：疫情笼罩下 全球硅晶圆首季逆势成长</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/3c41cbfd923015865c5864b0f7c674c3-600x400.jpg" />
-<h6>第一季全球硅晶圆出货较2019年第四季增加2.7%，显示出全球硅晶圆出现小幅反弹。 （Getty Image）
+<h6>第一季全球硅晶圆出货较2019年第四季增加2.7%，显示出全球硅晶圆出现小幅反弹。  (THOMAS KIENZLE/AFP via Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年05月05日讯】（大纪元记者张原彰台湾台北报导）全球半导体<ahref="https://github.com/er2596/djy/blob/master/gb/tag/%E7%A1%85%E6%99%B6%E5%9C%86.md#1">硅晶圆</a>在第一季出现小幅反弹，SEMI国际半导体产业协会5日发布报告指出，第一季全球硅晶圆出货较2019年第四季增加2.7%，显示出全球硅晶圆出现小幅反弹，但由于中共肺炎（武汉肺炎）疫情延烧，未来几个季度的市场还是存在不确定性。</p>
-<p>SEMI国际半导体产业协会旗下的Silicon Manufacturers Group（SMG）发布<ahref="https://github.com/er2596/djy/blob/master/gb/tag/%E7%A1%85%E6%99%B6%E5%9C%86.md#1">硅晶圆</a>产业2020年第一季分析报告，内容指出，全球硅晶圆出货总面积达2,920百万平方英寸（MSI），较2019年第四季出货总面积2,844百万平方英寸增长2.7%，和去年同期相比则下降4.3%。</p>
+<p>【大纪元2020年05月05日讯】（大纪元记者张原彰台湾台北报导）全球半导体<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A1%85%E6%99%B6%E5%9C%86.md#1">硅晶圆</a>在第一季出现小幅反弹，SEMI国际半导体产业协会5日发布报告指出，第一季全球硅晶圆出货较2019年第四季增加2.7%，显示出全球硅晶圆出现小幅反弹，但由于中共肺炎（武汉肺炎）疫情延烧，未来几个季度的市场还是存在不确定性。</p>
+<p>SEMI国际半导体产业协会旗下的Silicon Manufacturers Group（SMG）发布<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A1%85%E6%99%B6%E5%9C%86.md#1">硅晶圆</a>产业2020年第一季分析报告，内容指出，全球硅晶圆出货总面积达2,920百万平方英寸（MSI），较2019年第四季出货总面积2,844百万平方英寸增长2.7%，和去年同期相比则下降4.3%。</p>
 <p>SEMI SMG主席暨美国信越硅利光产品开发与应用工程副总监Neil Weaver表示，“全球硅晶圆出货量在经历过去一年的下滑之后，于2020年第一季度呈现小幅反弹。不过在疫情影响下，市场的不确定性可能会在未来几个季度带来负面影响。”</p>
 <p>SEMI预期，晶片制造厂第二季可能增加硅晶圆订单，但下半年半导体市场需求恐受影响，硅晶圆销售可能于第三季开始下滑。</p>
 <p>SEMI表示，硅晶圆为打造半导体的基础构件，对于电脑、通讯、消费性电子等电子产品，都是十分重要的元件。硅晶圆经过精密处理后，外观为薄型圆盘状，直径分为多种尺寸（1吋到?12吋），半导体元件或“晶片”多半以此为制造基底材料。</p>
@@ -19,42 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/19/6/14/n11322028.md#1">林智坚访竹科  全球第三大半导体硅晶圆厂制程</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/19/8/2/n11426272.md#1">太阳能电池报价跌幅最大逾6%</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/19/10/1/n11559791.md#1">半导体硅晶圆出货年减6.3% 2020年可望回稳</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/19/11/1/n11627020.md#1">集邦科技：中国太阳能装机量不如预期</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/19/11/13/n11653227.md#1">全球Q3硅晶圆出货连4季下滑 创9季新低</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/19/12/5/n11702600.md#1">台积电举办供应链管理论坛 表扬14家优良厂商</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/19/12/20/n11735964.md#1">探究台商回流金额 谢金河：现场实况很吃惊</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/19/12/22/n11738178.md#1">政府推升大型案场建置 业者看好明年太阳能营运成长</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/4/15/n12032949.md#1">赢过韩国 台湾2019半导体设备市场全球第一</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/5/n12084824.md#1">全球平板电脑Q2出货将季增45%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/6/14/n11322028.md#1">林智坚访竹科  全球第三大半导体硅晶圆厂制程</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/2/n11426272.md#1">太阳能电池报价跌幅最大逾6%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/1/n11559791.md#1">半导体硅晶圆出货年减6.3% 2020年可望回稳</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/11/1/n11627020.md#1">集邦科技：中国太阳能装机量不如预期</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/11/13/n11653227.md#1">全球Q3硅晶圆出货连4季下滑 创9季新低</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/5/n11702600.md#1">台积电举办供应链管理论坛 表扬14家优良厂商</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/20/n11735964.md#1">探究台商回流金额 谢金河：现场实况很吃惊</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/22/n11738178.md#1">政府推升大型案场建置 业者看好明年太阳能营运成长</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/15/n12032949.md#1">赢过韩国 台湾2019半导体设备市场全球第一</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689138.md#1">英特尔执行长年薪51亿 为一般员工1711倍</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/er2596/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/13/n11519967.md#1" target="_blank">中秋佳节谢师恩 纽约华人的奇妙经历</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/2/n12077776.md#1">遭央视连骂三天 蓬佩奥反在中国人气飙升</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/3/n12080214.md#1">蓬佩奥：大量证据将病毒和武汉实验室相联</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/4/n12080777.md#1">川普：中共犯了一个可怕错误 还不想承认</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/3/n12080130.md#1">遭央视谩骂的第二个美国人 班农说了啥？</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/4/n12081675.md#1">刘真离世44天 辛龙深夜发文悼亡妻</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/2/n12078172.md#1">范冰冰被堵绝财路？传遭广电总局禁直播卖货</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/3/n12080335.md#1">孙俪发文为女儿庆生 6岁小花又被亲到脸变形</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/3/n12079058.md#1">蔡阿嘎二宝满月 喜收蔡总统暖心贺礼</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/1/n12076864.md#1">脸书呛警帖文遭封杀 阮民安谴责中共五毛党</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/5/1/n12076297.md#1">守成贤主宋仁宗 驾崩后连敌国也举国哀痛</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/3/26/n11977935.md#1">【品读宋词】词中帝王 风流千古</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/4/30/n12071494.md#1">飘洋过海 移民艰辛路──我家族的故事（一）</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/4/20/n12046031.md#1">大总统徐世昌测一字 奇人料定战争结局</a></li>
-<li><a href="https://github.com/er2596/djy/blob/master/gb/20/4/22/n12051570.md#1">解读达芬奇未完之作《圣·杰洛姆》画中含意</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/er2596/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/er2596/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/5/n12084810.htm">SEMI：疫情笼罩下 全球硅晶圆首季逆势成长</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/5/n12084810.htm">SEMI：疫情笼罩下 全球硅晶圆首季逆势成长</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/er2596/djy/blob/master/gb/20/5/5/n12084810.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/er2596/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/er2596/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/er2596/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/er2596/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/er2596/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/5/5/n12084810.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
